src/test/deca/codegen/invalid/SansObjet/ArithmeticFloatOverflow-Add.deca
// Description:
//    Overflow for a float arithmetic addition
//
// Results:
//     ERROR: float_arithmetic_overflow
//
// History:
//    created on 13/01/2022

{
    float x = 16777216.0; // 2^24
    float y = 1.0;
    print(x+y);
}
